[gd_scene load_steps=7 format=3 uid="uid://deg11parksobh"]

[ext_resource type="Script" uid="uid://cfj7b07nbqskg" path="res://mob/mob.gd" id="1_6jlfs"]
[ext_resource type="PackedScene" uid="uid://bqorem2c0hsn6" path="res://mob/bat_model.tscn" id="1_7b8ug"]
[ext_resource type="AudioStream" uid="uid://bkgp8vdbuf7gp" path="res://mob/mob_take_damage.wav" id="3_mixeo"]
[ext_resource type="AudioStream" uid="uid://tftwkol0g766" path="res://mob/mob_ko.wav" id="4_jkfaf"]

[sub_resource type="SphereShape3D" id="SphereShape3D_7b8ug"]

[sub_resource type="SphereShape3D" id="SphereShape3D_mixeo"]

[node name="Mob" type="RigidBody3D"]
gravity_scale = 0.0
script = ExtResource("1_6jlfs")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0, 0)
shape = SubResource("SphereShape3D_7b8ug")

[node name="bat_model" parent="." instance=ExtResource("1_7b8ug")]
unique_name_in_owner = true

[node name="death_timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0

[node name="HurtSound" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_mixeo")

[node name="KOSound" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_jkfaf")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(0.655, 0, 0, 0, 0.655, 0, 0, 0, 0.655, 0, 0, 0)
shape = SubResource("SphereShape3D_mixeo")

[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
